--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
        <h2>¿Qué es HTML?</h2>
        <!-- Agrega las etiquetas <em> </em> al texto: "HyperText Markup Language" -->
        <!-- Agrega las etiquetas <strong> </strong> a la palabra "estructura" y "contenido".  -->
-       <p>HTML significa HyperText Markup Language y se utiliza para crear 
-          la estructura y el contenido de una página web.</p> 
+       <p>HTML significa <em>HyperText Markup Language</em> y se utiliza para crear 
+          la <strong>estructura</strong> y el <strong>contenido</strong> de una página web.</p> 
       
        <h5>Puntos clave:</h5>
        <p>HTML es un lenguaje muy sencillo compuesto de elementos.</p>
@@ -45,7 +45,7 @@
            tecnología central que hace que la web funcione.
 
            <!-- Agrega las etiquetas <em></em> a las palabras "event listeners" y "event handlers" -->
-           A través de los event listeners y event handlers de 
+           A través de los <em>event listeners</em> y <em>event handlers</em> de 
            JavaScript, puedes definir como tu página web reaccionará a la 
            interacción con el usuario.
 
